added requirements, added ruff to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,16 @@
 repos:
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.0.285
+  hooks:
+    - id: ruff
+      args: [--fix, --exit-non-zero-on-fix]
 -   repo: https://github.com/ambv/black
     rev: 23.7.0
     hooks:
     - id: black
-      language_version: python3.11
+      # language_version: python3.11
+# -   repo: https://github.com/pre-commit/mirrors-mypy
+#     rev: ''  # Use the sha / tag you want to point at
+#     hooks:
+#     -   id: mypy
