--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@ repos:
     - id: black
       # language_version: python3.11
 # -   repo: https://github.com/pre-commit/mirrors-mypy
-#     rev: ''  # Use the sha / tag you want to point at
+#     rev: 'v1.5.1'  # Use the sha / tag you want to point at
 #     hooks:
-#     -   id: mypy
+#     - id: mypy
+#       exclude: NeuraviperPy.py
+#       args: [--ignore-missing-imports]
