--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,16 @@
 repos:
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  # Ruff version.
-  rev: v0.0.285
-  hooks:
-    - id: ruff
-      args: [--fix, --exit-non-zero-on-fix]
--   repo: https://github.com/ambv/black
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.0.285
+    hooks:
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+        exclude: ^gui.py
+  - repo: https://github.com/ambv/black
     rev: 23.7.0
     hooks:
-    - id: black
+      - id: black
+        exclude: ^gui.py
       # language_version: python3.11
 # -   repo: https://github.com/pre-commit/mirrors-mypy
 #     rev: 'v1.5.1'  # Use the sha / tag you want to point at
