cleanup dev branch

--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,15 @@
-*.bin
-*.dll
-*.h
-*.lib
-*.cfg
-*_old.py
-
 __pycache__/*
 .pytest_cache
 .ruff_cache
 .ipynb_checkpoints/
+.pre-commit-config.yaml
 
-update_blocker
+start_app.bat
 
-close_box.py
-test_oestream.py
-mypy.ini
-
-docs/build
-docs/source/_static
-docs/source/_templates
-
-testarea.ipynb
-
-VB_classes_pydantic.py
-multiwin.json
-multiwin.py
-testgui.py
-gui_radio.py
-activity.log
-ViperBoxInterface.log
-
-.dockerignore
-.vsconfig-2017
-Dockerfile
-
+docs/
 Recordings/
 Settings/
-plantuml/
 logs/
 Stimulations/
-
-deploy_viperbox_user
+untracked/
+defaults/__pycache__/
