updated gitignore and pre commit

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ testing.ipynb
 
 start_app.bat
 gold_ui.py
-NeuraviperAPI_1_1_3_x64.dll
-NeuraviperAPI_1_1_3_x64.lib
+
+setup/installer.bat
 
 docs/
 Recordings/
