--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-        exclude: ^gui.py
+        # exclude: ^gui.py
   - repo: https://github.com/ambv/black
     rev: 23.7.0
     hooks:
