--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,6 @@ line-length = 88
 
 [tool.ruff.lint]
 ignore = ["E501"]
-select = ["E4", "E7", "E9", "F", "UP", "FA"]
+select = ["E4", "E7", "E9", "F", "UP", "FA", "I"]
 
 [tool.versioningit]
